;**************************************************************************
;*                                                                        *
;*                                 OCaml                                  *
;*                                                                        *
;*                     Thomas Refis, Jane Street Europe                   *
;*                                                                        *
;*   Copyright 2018 Jane Street Group LLC                                 *
;*                                                                        *
;*   All rights reserved.  This file is distributed under the terms of    *
;*   the GNU Lesser General Public License version 2.1, with the          *
;*   special exception on linking described in the file LICENSE.          *
;*                                                                        *
;**************************************************************************

; mshinwell: Disabled for now -- otherlibs/dynlink/dune needs fixing first.

(ocamllex debugger_lexer)
(ocamlyacc debugger_parser)

(library
 (name sdebugger)
 (public_name sdebugger)
 (modes byte)
 (flags (:standard -w -9..37))
 (modules_without_implementation parser_aux)
 (libraries
   compiler-libs.bytecomp
   compiler-libs.common
   compiler-libs.optcomp
   compiler-libs.toplevel
   dynlink
   unix
   str
   soc_compat
   ))
